--- a/angular-openlayer/angular.json
+++ b/angular-openlayer/angular.json
@@ -28,6 +28,7 @@
             ],
             "styles": [
               "src/styles.scss"
+	      "node_modules/ol/ol.css"
             ],
             "scripts": []
           },
